--- a/cards.css
+++ b/cards.css
@@ -22,7 +22,7 @@
     padding: .25em;
     margin: 0 .5em .5em 0;
     text-align: center;
-    font-size: 1.2em; /* @change: adjust this value to make bigger or smaller cards */
+    font-size: 2em; /* @change: adjust this value to make bigger or smaller cards */
     font-weight: normal;
     font-family: Arial, sans-serif;
     position: relative;
@@ -39,7 +39,10 @@
 .playingCards a.card:hover, .playingCards a.card:active, .playingCards a.card:focus,
 .playingCards label.card:hover,
 .playingCards strong .card {
-    bottom: 1em;
+  bottom: .2em;
+  transition: background-color 50ms ease-out 50ms;
+  -webkit-transition: background-color 50ms ease-out 50ms; /* Safari and Chrome */
+  background:#E1F5FE;
 }
 .playingCards label.card {
     cursor: pointer;
