--- a/cards.css
+++ b/cards.css
@@ -14,7 +14,7 @@
     display: inline-block;
     width: 3.3em;
     height: 4.6em;
-    border: 1px solid #666;
+    border: 1px solid #000;
     border-radius: .3em;
     -moz-border-radius: .3em;
     -webkit-border-radius: .3em;
@@ -24,7 +24,7 @@
     text-align: center;
     font-size: 2em; /* @change: adjust this value to make bigger or smaller cards */
     font-weight: normal;
-    font-family: Arial, sans-serif;
+    font-family: 'Open Sans Condensed', Arial, sans-serif;
     position: relative;
     background-color: #fff;
     -moz-box-shadow: .2em .2em .5em #9E9E9E;
