Refactor card elements
- Change from unordered list of cards to divs. Should make transitioning easier.

--- a/cards.css
+++ b/cards.css
@@ -9,7 +9,9 @@
 
 /* card itself
 ********************************************************************/
-
+.playingCards {
+  float:left;
+}
 .playingCards .card {
     display: inline-block;
     width: 3.3em;
