Add swapWithPrevCard, swapWithNextCard
- Add event handler and functions that swap the clicked card with the previous or next card.

--- a/cards.css
+++ b/cards.css
@@ -11,6 +11,7 @@
 ********************************************************************/
 .playingCards {
   float:left;
+  position:relative;
 }
 .playingCards .card {
     display: inline-block;
